--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -23,7 +23,8 @@ body {
 }
 
 #root {
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
